# globular-cluster-detection-bp

./: README.md
data/results/pipeline-cluster/: a1_180.0_18.0.small.json  a1_196.0_14.0.small.json  a1_196.0_18.0.small.json  a1_204.0_26.0.small.json  a1_208.0_26.0.small.json  a1_228.0_-2.0.small.json  a1_228.0_2.0.small.json  a2_297.0_17.0.small.json  a3_0.0_-74.0.small.json  a3_0.0_-78.0.small.json  a3_12.0_-34.0.small.json  a3_12.0_-38.0.small.json  a3_36.0_-38.0.small.json  a3_40.0_-38.0.small.json  a3_48.0_-58.0.small.json  a3_68.0_-86.0.small.json  a4_16.0_58.0.small.json  a4_20.0_30.0.small.json
report/: .gitignore  Makefile  Tupfile  format-all.sh
report/src/: 0a-abstract.tex  0b-acknowledgements.tex  1-introduction.tex  2-data.tex  3-methodology.tex  4-results.tex  5-conclusion.tex  6-evaluation.tex  7-appendix.tex  8-results.tex  main.tex  references.bib  thesis.sty
report/src/figures/3d-pipeline-plots/: a1-204.0-26.0-heamap-2sides
report/src/figures/source-figures/: diagram.kra
report/src/figures/universe-object-frames/: descriptions_and_reasons_for_areas  reasons_why_these_areas_and some descriptions
src/jule-goliath/: Manifest.toml  Project.toml
src/jule-goliath/src/: hydrangea.jl
src/julia-plotting/: Manifest.toml  Project.toml  plotting.jl
src/rusty-hydra/: Cargo.toml  rustfmt.toml
src/rusty-hydra/src/: cli.rs  lib.rs  stellar.rs  utils.rs
src/rusty-hydra/src/stellar/: cluster.rs  star.rs  universe.rs
