[package]
name = "rusty-hydra"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
csv = "1.1.6"
rand = "0.8.4"
serde = { version = "1.0.130", features = ["derive"] }
structopt = "0.3.25"
log = { package = "tracing", version = "0.1.29" }
log-subscriber = { package = "tracing-subscriber", version = "0.3.1" }
anyhow = "1.0.44"
thiserror = "1.0.30"
rayon = "1.5.1"
nalgebra = { version = "0.29.0", features = ["serde-serialize"] }
serde_json = "1.0.68"
indexmap = { version = "1.7.0", features = ["serde"] }
kiddo = "0.1.5"
atty = "0.2.14"

[dev-dependencies]
approx = "0.5.0"
